Add coverage timeline browser
